# uvscada

./: .gitignore  CMakeLists.txt  COPYING  README  decode.py  devices.txt  env.sh  execute.py  main.cpp  main.py  models.txt  temp_file.py
8751/: glitchmon.py  mon.py
TEMPer/rev1/: 24c02.cpp  CMakeLists.txt  README  TEMPer.cpp  TEMPer.h  TEMPer_config.h.in  fm75.cpp  i2c.cpp  main.cpp  max6675.cpp  serial.cpp
a123/: test.py
bpm/: .gitignore  bp.py  bp1410.py  bp1410_eeprom_r.py  bp1410_eeprom_r2.py  bp1410_fw.py  bp1410_fw_fx2.py  bp1410_fw_sn.py  bp1410_power.py  bp1410_power_old.py  bp1410_rst_12.py  bp1410_rst_480.py  bp1410_sn.py  bp1410_startup_hack.py  bp1410_startup_n.py  bp1410_startup_reg.py  bp1410_startup_test.py  cont.py  eeprom_r.py  failed_n.py  i87c51_read.py  i87c51_read_fw.py  i87c51_write.py  i87c51_write_fw.py  led.py  linux_rst_seq.py  norm.py  pwr.py  recover.py  rloop_vid.py  scrape.py  sn.py  startup.py  startup_sm.py  udev.sh
camac/: camgpib.c
capture/: .gitignore  CMakeLists.txt  main.cpp
capture_kmodule/: .gitignore  Makefile  user.cpp  user.mk  uvscopetek.c
decode/: decode.cpp  decode.py
dmm/: k2750.py  k2750_csv.py  k2750_plt.py
dylos/: logger.py  talker.py
emmap/: emcap.py  emcap_decode.py
eprom_etime/: README.txt  eprom_etime.py  patgen.py  sweep.py
ezlaze/: cwmap.py  ezfuzz.py  ezmap.py  pwrmap.py  pwrmap_img.py  pwrmap_plt3.py  shutter.py  simplefuzz.py  simplefuzz_img.py  test.py
fwpwr/: process.py  ps6k_cap.py
glitchmap/: README.txt  ezfuzz.py  simplefuzz.py  simplefuzz_img.py
gp307/: graph.py  logger.py
graupner/: log.py  logger.py  ppro_test.py  process.py  test.py
gspca/: 1024x768.c  1600x1200.c  Makefile  (+3 more)
scopetek/: 0001-scopetek-directly-control-RGB-gain.patch  CMakeLists.txt  README
scopetek/capture/: CMakeLists.txt  hexdump.cpp
scopetek/decode/: CMakeLists.txt  decode.cpp
scopetek/gspca/: .gitignore  1280x960.c  3264x2448.c  640x480.c  Makefile  replay.c  twain.c  unified.c  user.cpp  uvscopetek_bad_frame_sync.c  uvscopetek_still_bad_frame_sync.c
scopetek/kmodule/: .gitignore  Makefile  replay.c  replay_orig.c  twain_replay.c  user.cpp  uvscopetek.c
scopetek/post/: uvscopetek-gspca-poc.c
(+300 files in other folders)
